# nostrcalendar.app.OC-python.src

./: CLAUDE.md  README.md  pyproject.toml
clawhub/: SKILL.md  metadata.json
src/nostrcal/: __init__.py  availability.py  booking.py  negotiate.py  types.py
src/nostrcalendar/: __init__.py  availability.py  booking.py  enclave.py  negotiate.py  types.py
tests/: test_availability.py  test_enclave.py  test_types.py
